#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([libswift], [VERSION], [BUG-REPORT-ADDRESS])
AC_CONFIG_SRCDIR([operational.h])
AC_CONFIG_HEADERS([config.h])


# Checks for programs.
AC_PROG_AWK
AC_PROG_CXX
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_MAKE_SET

# Checks for libraries.
# FIXME: Replace `main' with a function in `-lrt':
AC_CHECK_LIB([rt], [main])

AC_LANG_PUSH([C++])
# Checks for header files.
AC_CHECK_HEADERS([event2/util.h arpa/inet.h fcntl.h netinet/in.h stdint.h stdlib.h string.h sys/socket.h sys/time.h sys/timeb.h unistd.h],,
                  [AC_MSG_ERROR([Missing headers])])
AC_LANG_POP()

# Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_HEADER_STDBOOL
AC_C_INLINE
AC_TYPE_INT16_T
AC_TYPE_INT32_T
AC_TYPE_INT64_T
AC_TYPE_INT8_T
AC_TYPE_MODE_T
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T
AC_TYPE_UINT64_T
AC_TYPE_UINT8_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_MMAP
AC_FUNC_REALLOC
AC_CHECK_FUNCS([ftruncate getcwd gethostbyname gettimeofday inet_ntoa memset mkdir munmap pow socket strchr strdup strerror strstr strtol])


AC_CONFIG_FILES([Makefile])
AC_OUTPUT
